# azure-init

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  CUSTOMCONFIG.md  Cargo.toml  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  build.rs  docker-compose.yml  functional_tests.sh  mkosi.conf  mkosi.postinst.chroot  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_or_feature_request.md
.github/workflows/: ci.yaml  clippy-linting.yml  coverage-report.yml  e2e-testing.yml  rust-clippy.yml  rust.yml
azurekvp/: Cargo.toml
azurekvp/src/: kvp.rs  lib.rs  main.rs  tracing.rs
config/: 10-azure-init-ssh.conf  azure-init.conf  azure-init.service  azure-provisioning-agent.service
demo/: customdata_template.yml  image_creation.sh
doc/: E2E_TESTING.md  architecture.md  azure_init_behavior.md  configuration.md  e2e_testing.md  getting_started.md  kvp.md  kvp_design.md  kvp_pr_description.md  libazurekvp.md
docs/: E2E_TESTING.md
images/: mkosi.build.chroot  mkosi.conf  mkosi.postinst.chroot  mkosi.sync.chroot
images/mkosi.conf.d/: 10-debian.conf  10-fedora.conf  10-ubuntu.conf
kubinit/: .gitignore  Dockerfile  README.md  collect-logs.sh  docker-compose.yml  start-all.sh
kubinit/testing-server/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt  start_server_docker.sh  test_server.py
libazureinit/: Cargo.toml  README.md  build.rs
libazureinit-kvp/: Cargo.toml
libazureinit-kvp/src/: azure.rs  cli.rs  diagnostics.rs  error.rs  hyperv.rs  kvp_pool.rs  lib.rs  main.rs  memory.rs  provisioning.rs  report.rs  store.rs  tracing_layer.rs  vm_id.rs
libazureinit-kvp/tests/: cli.rs  cli_smoke.rs  diagnostics.rs
libazureinit/src/: config.rs  distro.rs  error.rs  goalstate.rs  health.rs  http.rs  imds.rs  kvp.rs  lib.rs  logging.rs  media.rs  status.rs  tracing.rs  unittest.rs  user.rs
libazureinit/src/provision/: config.rs  hostname.rs  mod.rs  password.rs  ssh.rs  user.rs
mkosi.conf.d/: 10-debian.conf  10-fedora.conf
src/: create_user_test.rs  distro.rs  functional_tests.rs  goalstate.rs  imds.rs  kvp.rs  lib.rs  logging.rs  main.rs  media.rs  user.rs
testinit/: Dockerfile  README.md  docker-compose.yml  start-all.sh  stop-all.sh
testinit/testing-server/: .dockerignore  Dockerfile  config.py  docker-compose.yml  imds_handler.py  requirements.txt  start_server_docker.sh  test_server.py  utils.py  wireserver_handler.py
testinit/testing-server/api-responses/imds/: bad-request-400.json  internal-error-500.json  one-bad-then-correct.json  one-bad-then-success.json  timeout-408.json  two-bad-then-success.json
testinit/testing-server/api-responses/wireserver/: internal-error-500.xml  not-found-404.xml  one-bad-then-success.xml  success-200.xml  two-bad-then-success.xml
tests/: Makefile  cli.rs  functional_test2.sh  functional_tests.rs  functional_tests.sh  image_creation.sh  ovf_env.xml
