[package]
name = "azure-init"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
readme = "README.md"
description = "A reference implementation for provisioning Linux VMs on Azure."
build = "build.rs"

[dependencies]
exitcode = "1.1.2"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.21", features = ["derive", "cargo", "env"] }
sysinfo = "0.35"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
opentelemetry = "0.29"
opentelemetry_sdk = "0.30"
tracing-opentelemetry = "0.30"
uuid = { version = "1.2", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
predicates-core = "1.0.8"
predicates-tree = "1.0.11"
tempfile = "3.3.0"

# Pin idna_adapter to <=1.2.0 for MSRV issues with cargo-clippy of Rust 1.78.0.
idna_adapter = "<=1.2.0"

[dependencies.libazureinit]
path = "libazureinit"
version = "0.1.0"

[profile.dev]
incremental = true

[[bin]]
name = "azure-init"
path = "src/main.rs"

[[bin]]
name = "functional_tests"
path = "tests/functional_tests.rs"

[workspace]
members = [
    "libazureinit",
]

[features]
passwd = []
hostnamectl = []
useradd = []

systemd_linux = ["passwd", "hostnamectl", "useradd"]

default = ["systemd_linux"]
