[package]
name = "azure-init"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
readme = "README.md"
description = "A reference implementation for provisioning Linux VMs on Azure."
build = "build.rs"

[dependencies]
exitcode = "1.1.2"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.21", features = ["derive", "cargo", "env"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-util = "0.7" 

# Pin sysinfo to <=0.36 for MSRV issues with Rust < 1.85.0.
# This should be unpinned around 2026-02-17 if we continue with our ~1 year MSRV policy
sysinfo = "=0.36"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
predicates-core = "1.0.8"
predicates-tree = "1.0.11"
tempfile = "3.3.0"

# Pin idna_adapter to <=1.2.0 for MSRV issues with cargo-clippy of Rust 1.78.0.
idna_adapter = "<=1.2.0"

[dependencies.libazureinit]
path = "libazureinit"
version = "0.1.0"

[profile.dev]
incremental = true

[[bin]]
name = "azure-init"
path = "src/main.rs"

[[bin]]
name = "functional_tests"
path = "tests/functional_tests.rs"

[workspace]
members = [
    "libazureinit",
]

[features]
passwd = []
hostnamectl = []
useradd = []

systemd_linux = ["passwd", "hostnamectl", "useradd"]

default = ["systemd_linux"]

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
vergen-gitcl = "9"
