[package]
name = "azurekvp"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "A binary library for implementing OpenTelemetry KVP for Linux VMs on Azure."


[dependencies]
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
serde = { version = "1.0" }
serde_json = "1.0.68"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
nix = "0.22.0"



[[bin]]
name = "azure-kvp"
path = "src/main.rs"