[package]
name = "azurekvp"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "A binary library for implementing OpenTelemetry KVP for Linux VMs on Azure."


[dependencies]
once_cell = "1.12.0"
opentelemetry = "0.18.0"
opentelemetry_sdk = "0.22.0"
opentelemetry-stdout = "0.2.0"
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.11"
serde = { version = "1.0" }
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[lib]
name = "azurekvp"
path = "src/tracing.rs"