[package]
name = "azurekvp"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "A binary library for implementing OpenTelemetry KVP for Linux VMs on Azure."


[dependencies]
opentelemetry = "0.18.0"
nix = "0.26"
chrono = "0.4"
uuid = { version = "1.2", features = ["v4"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.18.0"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.3"
sys-info = "0.9"

[lib]
name = "azurekvp"
path = "src/lib.rs"