[package]
name = "libazureinit-kvp"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "Hyper-V KVP (Key-Value Pair) storage library for azure-init."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.21", features = ["derive"] }
csv = "1"
libc = "0.2"
serde_json = "1.0.96"
tracing = "0.1.40"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
tempfile = "3"

[lib]
name = "libazureinit_kvp"
path = "src/lib.rs"
