[package]
name = "libazureinit"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
build = "build.rs"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "A common library for provisioning Linux VMs on Azure."

[dependencies]
reqwest = { version = "0.12.0", default-features = false, features = ["blocking", "json"] }
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.96"
nix = {version = "0.29.0", features = ["fs", "user"]}
block-utils = "0.11.1"
tracing = "0.1.40"
fstab = "0.4.0"
toml = "0.5"
regex = "1"
lazy_static = "1.4"
tempfile = "3.3.0"
figment = { version = "0.10", features = ["toml"] }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
whoami = "1"
anyhow = "1.0.81"

[lib]
name = "libazureinit"
path = "src/lib.rs"

