[package]
name = "libazureinit"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
build = "build.rs"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "A common library for provisioning Linux VMs on Azure."

[dependencies]
reqwest = { version = "0.12.0", default-features = false, features = ["blocking", "json"] }
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.8.0"
serde_json = "1.0.96"
nix = {version = "0.30.1", features = ["fs", "user"]}
block-utils = "0.11.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
tracing-opentelemetry = "0.31"
tokio-util = "0.7"
sysinfo = "0.36"
anyhow = "1"
fstab = "0.4.0"
toml = "0.9"
regex = "1"
lazy_static = "1.4"
figment = { version = "0.10", features = ["toml"] }
# Pinned to 0.1.5 since 0.1.6 bumps its MSRV to 1.81.
# The major difference in 0.1.6 is the switch to core::error
# This should be unpinned on or around 2025-09-05 if we continue with our ~1 year MSRV policy
zerofrom = "=0.1.5"
# Pinned to 0.7.4 since 0.7.5 bumps its MSRV to 1.81.
# The major difference in 0.7.5 is the switch to core::error; there's also a few API additions.
# This should be unpinned on or around 2025-09-05 if we continue with our ~1 year MSRV policy
litemap = "=0.7.4"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
whoami = "1"
anyhow = "1.0.81"

[lib]
name = "libazureinit"
path = "src/lib.rs"

