[package]
name = "libazureinit"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
build = "build.rs"
repository = "https://github.com/Azure/azure-init/"
homepage = "https://github.com/Azure/azure-init/"
license = "MIT"
description = "A common library for provisioning Linux VMs on Azure."

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json"] }
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.8.0"
serde_json = "1.0.96"
rustix = { version = "0.38", features = ["fs", "process"] }
users = "0.11"
block-utils = "0.11.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32"
tokio-util = "0.7"
# Pin sysinfo to <=0.36 for MSRV issues with Rust < 1.85.0.
# This should be unpinned around 2026-02-17 if we continue with our ~1 year MSRV policy
sysinfo = "=0.36"
anyhow = "1"
fstab = "0.4.0"
toml = "0.9"
regex = "1"
lazy_static = "1.4"
figment = { version = "0.10", features = ["toml"] }
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
zeroize = "1.8"
fs2 = "0.4"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
whoami = "1"
anyhow = "1.0.81"
gag = "1.0.0"
serial_test = "3.0.0"

[lib]
name = "libazureinit"
path = "src/lib.rs"

